--- a/README
+++ b/README
@@ -32,7 +32,7 @@ derivatives/
 * labels used for training our method
 
 
-Project: https://rocknroll87q.github.io/cerebrum7t/
-Code: https://github.com/rockNroll87q/cerebrum7t
-Paper: https://www.biorxiv.org/content/10.1101/2020.07.07.191536v2
-Full dataset: https://search.kg.ebrains.eu/instances/Dataset/2b24466d-f1cd-4b66-afa8-d70a6755ebea
+Project: [link](https://rocknroll87q.github.io/cerebrum7t/)
+Code: [link](https://github.com/rockNroll87q/cerebrum7t)
+Paper: [link](https://www.biorxiv.org/content/10.1101/2020.07.07.191536v2)
+Full dataset: [link](https://search.kg.ebrains.eu/instances/Dataset/2b24466d-f1cd-4b66-afa8-d70a6755ebea)
