[DATALAD] Recorded changes

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-* * * Visit the [project website](https://rocknroll87q.github.io/cerebrum7t/) for more * * *
+Visit the [project website](https://rocknroll87q.github.io/cerebrum7t/) for more.
 
 The dataset is composed by 3 subjects, scanned at the Imaging Centre of Excellence (ICE) at the Queen Elizabeth University Hospital, Glasgow (UK).
 The full database consists of 142 out-of-the-scanner volumes obtained with a MP2RAGE sequence at 0.63 mm3 isotropic resolution, using a 7-Tesla MRI scanner with 32-channel head coil.
